@@ -1,3 +1,8 @@
+Thu Jan  6 05:14:41 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/stringio/stringio.c (get_strio, strio_set_string)
+	  (strio_reopen): check if frozen.  [ruby-core:33648]
+
 Thu Jan  6 05:10:58 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* array.c (rb_ary_resize): new utility function.  [ruby-dev:42912]
